--- a/index.html
+++ b/index.html
@@ -13,51 +13,235 @@
 
     <header>
 
-        <nav>
-            <div class="navbar_left">
-                <h1><span>r</span>esto</h1>
-            </div>
+            <nav>
+                <div class="navbar_left">
+                    <h1><span>r</span>esto</h1>
+                    <div class="nav_toggle" id="navToggle">
+                        <img src="/images/menu.png" alt="menu">
+                        <img src="/images/close.png" alt="close">
 
-            <div class="navbar_right">
-                <ul>
-                    <a href="#">Acceuil</a>
-                    <a href="#">A propos</a>
-                    <a href="#">Menu</a>
-                    <a href="#">Expert</a>
-                    <a href="#">Temoignages</a>
-                    <a href="#">Contacts</a>
-                    <a href="#">
+                    </div>
+                </div>
+
+                <div class="navbar_right">
+                    <ul>
+                        <a href="#">Acceuil</a>
+                        <a href="#">A propos</a>
+                        <a href="#">Menu</a>
+                        <a href="#">Expert</a>
+                        <a href="#">Temoignages</a>
+                        <a href="#">Contacts</a>
                         <button>reservation</button>
-                    </a>
-                </ul>
+                    </ul>
+                </div>
+            </nav>
+
+            <div class="container">
+
+                <h1>Que Des Plats Délicieux</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolore quia vitae voluptates
+                    eligendi, itaque similique maxime ut quibusdam sint laborum natus, nobis sit laudantium unde neque
+                    ducimus ullam ipsam.
+                </p>
+
+                <div class="btn_box">
+                    <button class="btn_menu">notre menu</button>
+                    <button class="btn_reservation">table de reservation</button>
+                </div>
             </div>
-        </nav>
 
-        <div class="container">
-
-            <h1>que des plats délicieux</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolore quia vitae voluptates
-                eligendi, itaque similique maxime ut quibusdam sint laborum natus, nobis sit laudantium unde neque
-                ducimus ullam ipsam.
-            </p>
-
-            <div class="btn_box">
-                <button class="btn_menu">notre menu</button>
-                <button class="btn_reservation">table de reservation</button>
-            </div>
-        </div>
+        
 
     </header>
 
     <main>
 
+        <div class="box_about">
+            <div class="box_about1">
+                <h1><span>a</span> propos de nous</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae numquam eos unde nam amet fugit
+                    distinctio quis doloremque voluptatem quibusdam hic, exercitationem laborum illum consequatur,
+                    delectus veniam reprehenderit ab fugiat.
+                    Perferendis incidunt corporis at possimus nam veniam voluptatum, perspiciatis ea necessitatibus
+                    iusto dolores eaque eos inventore, laudantium explicabo. Quidem obcaecati adipisci excepturi, hic.
+                </p>
+            </div>
+
+            <div class="plat_3">
+                <img src="images/plat3.jpg" alt="plat3">
+            </div>
+        </div>
+
+        <!-- **************************** SECTION DIFFERENTS MENU ******************************** -->
+
+        <section class="menu">
+            <div class="box_menu">
+                <h1><span>M</span>enu</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit voluptatum.</p>
+            </div>
+
+            <div class="menu_images">
+                <div class="img_box">
+                    <img src="./images/c4.jpg">
+                    <p>special salade</p>
+                </div>
+                <div class="img_box">
+                    <img src="./images/c3.jpg">
+                    <p>special salade</p>
+                </div>
+                <div class="img_box">
+                    <img src="./images/c2.jpg">
+                    <p>special salade</p>
+                </div>
+                <div class="img_box">
+                    <img src="./images/c1.jpg">
+                    <p>special salade</p>
+                </div>
+                <div class="img_box">
+                    <img src="./images/c5.jpg">
+                    <p>special salade</p>
+                </div>
+                <div class="img_box">
+                    <img src="./images/c6.jpg">
+                    <p>special salade</p>
+                </div>
+                <div class="img_box">
+                    <img src="./images/c7.jpg">
+                    <p>special salade</p>
+                </div>
+                <div class="img_box">
+                    <img src="./images/c8.jpg">
+                    <p>special salade</p>
+                </div>
+
+            </div>
+
+            <div class="btn-menu">
+                <button>Voir tout</button>
+            </div>
+
+        </section>
+
+        <!-- ************************* SECTION EXPERTS *************************************** -->
+
+        <section class="experts">
+
+            <div class="text_expert">
+                <h1>nos <span>e</span>xperts</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, Perspiciatis ipsa cum.</p>
+            </div>
+
+            <div class="images_expert">
+                <div>
+                    <img src="images/equipe1.jpg">
+                    <p>Franck Leroi</p>
+                </div>
+                <div>
+                    <img src="images/equipe2.jpg">
+                    <p>Franck Leroi</p>
+                </div>
+                <div>
+                    <img src="images/equipe3.jpg">
+                    <p>Franck Leroi</p>
+                </div>
+                <div>
+                    <img src="images/equipe4.jpg">
+                    <p>Franck Leroi</p>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- ++++++++++++++++++++++++++++++++ SECTION AVIS CLIENTS ++++++++++++++++++++++++++++++++++++ -->
+
+        <section class="box_clients">
+            <h1>que disent nos <span>c</span>lients</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit Debitis excepturi a quas ipsam deleniti.</p>
+
+            <div class="box_avis_clients">
+
+                <div class="client_1">
+
+                    <img src="images/t1.jpeg">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ab cumque, cupiditate labore
+                        expedita suscipit dolores iure nulla modi sunt sapiente quae unde molestias maxime vel
+                        aspernatur qui incidunt soluta!
+                    </p>
+                    <a href="#">Franck Leroi</a>
+
+                </div>
+
+                <div class="client_1">
+
+                    <img src="images/t2.jpg">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ab cumque, cupiditate labore
+                        expedita suscipit dolores iure nulla modi sunt sapiente quae unde molestias maxime vel
+                        aspernatur qui incidunt soluta!
+                    </p>
+                    <a href="#">Franck Leroi</a>
+
+                </div>
+
+                <div class="client_1">
+
+                    <img src="images/t3.jpg">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ab cumque, cupiditate labore
+                        expedita suscipit dolores iure nulla modi sunt sapiente quae unde molestias maxime vel
+                        aspernatur qui incidunt soluta!
+                    </p>
+                    <a href="#">Franck Leroi</a>
+
+                </div>
+
+            </div>
+        </section>
+
     </main>
 
+
+    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++ FOOTER HTML +++++++++++++++++++++++++++++++++++++++++-->
     <footer>
+
+        <!-- <div class="container">
+
+        </div> -->
+
+        <div class="description">
+
+            <h1><span>c</span>ontacts</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, Quod esse eveniet dolores.</p>
+
+
+
+            <form action="" method="post">
+
+                <h2>Envoyer un message</h2>
+
+                <div>
+                    <input type="text" placeholder="name">
+                </div>
+                <div>
+                    <input type="email" placeholder="email">
+                </div>
+                <div>
+                    <textarea name="" id="" cols="40" rows="3" placeholder="message"></textarea>
+                </div>
+
+                <div>
+                    <button>Envoyer</button>
+                </div>
+            </form>
+
+        </div>
+
 
     </footer>
 
+    <div class="copyright">
 
+        <p>copyright © 2022 <a href="#">silué edwige</a> checkpoint projet final. Tous droits réservé</p>
+
+    </div>
 
     <script src="main.js"></script>
 
