--- a/index.html
+++ b/index.html
@@ -9,50 +9,52 @@
     <title>PROJET FINAL</title>
 </head>
 
+
 <body>
 
     <header>
 
-            <nav>
-                <div class="navbar_left">
-                    <h1><span>r</span>esto</h1>
-                    <div class="nav_toggle" id="navToggle">
-                        <img src="/images/menu.png" alt="menu">
-                        <img src="/images/close.png" alt="close">
+        <h1><span>r</span>esto</h1>
 
-                    </div>
-                </div>
+        <div class="nav_toggle" id="navToggle">
+            <img src="/images/menu.png" alt="menu">
+            <!-- <img src="/images/close-menu.png" alt="close"> -->
+        </div>
 
-                <div class="navbar_right">
-                    <ul>
-                        <a href="#">Acceuil</a>
-                        <a href="#">A propos</a>
-                        <a href="#">Menu</a>
-                        <a href="#">Expert</a>
-                        <a href="#">Temoignages</a>
-                        <a href="#">Contacts</a>
-                        <button>reservation</button>
-                    </ul>
-                </div>
-            </nav>
+        <div class="nav_right">
 
-            <div class="container">
+            <ul>
+                <li><a href="#banner_box">accueil</a></li>
+                <li><a href="#box_about">about</a></li>
+                <li><a href="#menu">menus</a></li>
+                <li><a href="#experts">experts</a></li>
+                <li><a href="#box_clients">temoignages</a></li>
+                <li><a href="#description">contacts</a></li>
+                <button>reservation</button>
+            </ul>
 
-                <h1>Que Des Plats Délicieux</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolore quia vitae voluptates
-                    eligendi, itaque similique maxime ut quibusdam sint laborum natus, nobis sit laudantium unde neque
-                    ducimus ullam ipsam.
-                </p>
-
-                <div class="btn_box">
-                    <button class="btn_menu">notre menu</button>
-                    <button class="btn_reservation">table de reservation</button>
-                </div>
-            </div>
-
-        
+        </div>
 
     </header>
+
+    <div class="banner_box">
+
+        <div class="banner_content">
+
+            <h1>que des plats délicieux</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim molestias, nihil repellat illo
+                exercitationem culpa eos harum vel sequi esse repudiandae obcaecati itaque voluptatibus accusamus
+                temporibus in illum quisquam recusandae.
+            </p>
+
+            <div class="banner_btn">
+                <button class="btn_menu">notre menu</button>
+                <button class="btn_reservation">table de reservation</button>
+            </div>
+
+        </div>
+
+    </div>
 
     <main>
 
@@ -81,6 +83,7 @@
             </div>
 
             <div class="menu_images">
+
                 <div class="img_box">
                     <img src="./images/c4.jpg">
                     <p>special salade</p>
